--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <type>pom</type>
             <version>2.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 
 
